# binnacle

./: .gitignore  README.md  cli.py  pyproject.toml
binnacle/adapters/typedb/: typedb_knowledge_graph.py
binnacle/api/: routes.py
binnacle/model/: k8s_object.py  networking.py
binnacle/services/: unit_of_work.py
schema/: attack_graph.tql  primitives.tql
schema/kubernetes/: k8s.tql  network-policy.tql  networking.tql  rbac.tql
