[project]
name = "binnacle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = ["Markus Gierlinger <ma.gierlinger+binnacle@gmail.com>"]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "kubernetes>=31.0.0",
    "loguru>=0.7.2",
    "plum-dispatch>=2.5.2",
    "pydantic-settings>=2.6.1",
    "pydantic>=2.9.2",
    "strenum>=0.4.15",
    "tabulate>=0.9.0",
    "typedb-driver>=2.29.0",
    "typer>=0.13.0",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.3",
]

[project.scripts]
binnacle = "binnacle.cli:app"
